--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,9 @@
 /public/assets/*
 
 # Ignore all logfiles and tempfiles.
-/log/*
 !/log/.keep
+/log/*
+/spec/persistence.log
 /tmp
 
 # Ignore backups
