--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,9 @@
 ---
+prepare:
+  fetch:
+  - url: "https://raw.githubusercontent.com/thoughtbot/guides/master/style/ruby/.rubocop.yml"
+    path: ".rubocop.yml"
+
 engines:
   brakeman:
     enabled: true
