Comment problematic lint

--- a/.rubocop_defaults.yml
+++ b/.rubocop_defaults.yml
@@ -1090,11 +1090,11 @@ Lint/IneffectiveAccessModifier:
                  the visibility of a class method, which does not work.
   Enabled: true
 
-Lint/InvalidCharacterLiteral:
-  Description: >-
-                 Checks for invalid character literals with a non-escaped
-                 whitespace character.
-  Enabled: true
+#Lint/InvalidCharacterLiteral:
+#  Description: >-
+#                 Checks for invalid character literals with a non-escaped
+#                 whitespace character.
+#  Enabled: true
 
 Lint/LiteralInCondition:
   Description: 'Checks of literals used in conditions.'
