--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           ruby-version: '2.2.10'
           bundler-cache: true
+        run: |
+          bundle install -with test
 
       - name: Setup Node
         uses: actions/setup-node@v1
