--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
+          bundle update bcrypt
           rake db:create
           rake db:schema:load
           bin/rspec spec/models/goal_spec.rb
